Fix blur on safari

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@
     text-align: center;
     background-color: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
 }
 
 #index-home h1, #index-home p{
